# spec-clarify-langgraph

./: .env  .env.template  .gitignore  BATCH_PROCESS_README.md  batch_compare_folders.py  batch_evaluate_srs.py  batch_process.py  compute_similarity.py  main.py  pyproject.toml  results.csv  srs_evaluation.py  srs_generator.py  srs_generator_v1.py  srs_generator_v2.py  text_similarity.py  wsm_deepseek-reasoner_results.csv  技术实现文档.md  测试数据生成.sh
.clinerules/: AGENTS.md  LangGraph.md  REQ.md
compare_output/: comparison_table.csv  comparison_table.xlsx
